[gd_scene load_steps=25 format=1]

[ext_resource path="res://fisherman/Game.gd" type="Script" id=1]
[ext_resource path="res://fisherman/PIC/b03533fa828ba61e518d48734234970a304e590f.jpg" type="Texture" id=2]
[ext_resource path="res://fisherman/PIC/33779.png" type="Texture" id=3]
[ext_resource path="res://fisherman/tilesets/tile.tres" type="TileSet" id=4]
[ext_resource path="res://fisherman/Grid3.gd" type="Script" id=5]
[ext_resource path="res://fisherman/GridVisualizer.gd" type="Script" id=6]
[ext_resource path="res://fisherman/palette.tscn" type="PackedScene" id=7]
[ext_resource path="res://fisherman/PIC/small/UP_resized.png" type="Texture" id=8]
[ext_resource path="res://fisherman/PIC/small/DOWN_resized.png" type="Texture" id=9]
[ext_resource path="res://fisherman/PIC/small/LEFT_resized.png" type="Texture" id=10]
[ext_resource path="res://fisherman/PIC/small/RIGHT_resized.png" type="Texture" id=11]
[ext_resource path="res://fisherman/PIC/small/PI_resized.png" type="Texture" id=12]
[ext_resource path="res://fisherman/PIC/small/PU_resized.png" type="Texture" id=13]
[ext_resource path="res://fisherman/PIC/small/LE_resized.png" type="Texture" id=14]
[ext_resource path="res://fisherman/PIC/small/RI_resized.png" type="Texture" id=15]
[ext_resource path="res://fisherman/PIC/small/FOR_resized.png" type="Texture" id=16]
[ext_resource path="res://fonts/kaiu.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://fisherman/PIC/Sheep_resized.png" type="Texture" id=18]
[ext_resource path="res://fisherman/PIC/liakad-piranha.png" type="Texture" id=19]
[ext_resource path="res://fisherman/PIC/cooltext288505254336041_resized.png" type="Texture" id=20]
[ext_resource path="res://fisherman/PIC/cooltext288505283491953_resized.png" type="Texture" id=21]
[ext_resource path="res://fisherman/PIC/START_resized.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=1]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 17 )
fallback/0 = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 17 )

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 599.625, 327.921 )
transform/scale = Vector2( 4.47633, 1.66565 )
texture = ExtResource( 2 )

[node name="bg1" type="Sprite" parent="."]

transform/pos = Vector2( 1030.18, 329.239 )
transform/scale = Vector2( 0.386291, 1.12302 )
texture = ExtResource( 3 )

[node name="Grid" type="TileMap" parent="."]

editor/display_folded = true
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 65, 65 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 0, 1, 0, 2, 4, 3, 3, 4, 4, 5, 3, 6, 3, 7, 3, 8, 4, 9, 3, 10, 3, 11, 0, 12, 0, 65536, 0, 65537, 0, 65538, 4, 65539, 4, 65540, 4, 65541, 3, 65542, 3, 65543, 3, 65544, 4, 65545, 4, 65546, 4, 65547, 0, 65548, 0, 131072, 0, 131073, 0, 131074, 3, 131075, 3, 131076, 3, 131077, 4, 131078, 3, 131079, 3, 131080, 3, 131081, 3, 131082, 3, 131083, 0, 131084, 0, 196608, 0, 196609, 0, 196610, 3, 196611, 3, 196612, 3, 196613, 4, 196614, 4, 196615, 4, 196616, 3, 196617, 3, 196618, 3, 196619, 7, 196620, 0, 262144, 0, 262145, 0, 262146, 3, 262147, 3, 262148, 3, 262149, 3, 262150, 4, 262151, 3, 262152, 3, 262153, 3, 262154, 3, 262155, 0, 262156, 0, 327680, 0, 327681, 0, 327682, 3, 327683, 4, 327684, 3, 327685, 3, 327686, 4, 327687, 4, 327688, 4, 327689, 3, 327690, 4, 327691, 0, 327692, 0, 393216, 0, 393217, 0, 393218, 3, 393219, 4, 393220, 4, 393221, 4, 393222, 3, 393223, 3, 393224, 3, 393225, 3, 393226, 4, 393227, 0, 393228, 0, 524297, 4, 524298, 4, 524299, 3, 524300, 3 )
script/script = ExtResource( 5 )

[node name="GridVisualizer" type="Node2D" parent="Grid"]

script/script = ExtResource( 6 )

[node name="palette" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 829.671, 25.4522 )
transform/scale = Vector2( 1.01641, 1.04607 )

[node name="command_bg" type="Sprite" parent="."]

transform/pos = Vector2( 423.538, 565.791 )
transform/scale = Vector2( 0.939427, 0.323084 )
texture = ExtResource( 3 )

[node name="commands" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -4.0
margin/top = 487.0
margin/right = 836.0
margin/bottom = 562.0
alignment = 0

[node name="command1" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -4.0
margin/top = 570.0
margin/right = 836.0
margin/bottom = 645.0
alignment = 0

[node name="up_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 586.0
margin/top = 694.0
margin/right = 648.0
margin/bottom = 760.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 8 )
flat = true

[node name="down_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 663.0
margin/top = 701.0
margin/right = 725.0
margin/bottom = 757.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = true

[node name="left_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 738.0
margin/top = 697.0
margin/right = 800.0
margin/bottom = 753.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 10 )
flat = true

[node name="right_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 513.0
margin/top = 698.0
margin/right = 575.0
margin/bottom = 754.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 11 )
flat = true

[node name="pick_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 811.0
margin/top = 698.0
margin/right = 873.0
margin/bottom = 754.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 12 )
flat = true

[node name="put_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 882.0
margin/top = 702.0
margin/right = 944.0
margin/bottom = 758.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 13 )
flat = true

[node name="le_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 949.0
margin/top = 703.0
margin/right = 1011.0
margin/bottom = 759.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 14 )
flat = true

[node name="ri_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1096.0
margin/top = 693.0
margin/right = 1158.0
margin/bottom = 749.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 15 )
flat = true

[node name="for_command" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1016.0
margin/top = 701.0
margin/right = 1078.0
margin/bottom = 757.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 16 )
flat = true

[node name="Popup_read" type="WindowDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 369.0
margin/top = 178.0
margin/right = 839.0
margin/bottom = 418.0
popup/exclusive = false
window/title = "Read Me"

[node name="RichTextLabel" type="RichTextLabel" parent="Popup_read"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 38.0
margin/right = 467.0
margin/bottom = 307.0
custom_fonts/normal_font = SubResource( 1 )
bbcode/enabled = true
bbcode/bbcode = "[center]﻿[color=#ffd966]小夥伴一起來幫助小羊過河吧！
[/color]
[color=#ffd966]小船現在要帶著小羊過岸。
[/color]
[color=#ffd966]過河的時候要注意河中的食人魚，

注意閃避危機喔！[/color][/center]

"
visible_characters = -1
percent_visible = 1.0

[node name="Sprite" type="Sprite" parent="Popup_read"]

transform/pos = Vector2( 396.264, 178.626 )
transform/scale = Vector2( 0.879955, 0.80989 )
texture = ExtResource( 18 )

[node name="Sprite 2" type="Sprite" parent="Popup_read"]

transform/pos = Vector2( 92.6476, 185.792 )
transform/scale = Vector2( -0.053881, 0.0600831 )
texture = ExtResource( 19 )

[node name="read" type="Button" parent="."]

rect/scale = Vector2( 1, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 909.0
margin/top = 552.0
margin/right = 1011.0
margin/bottom = 638.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 20 )
flat = true

[node name="read 2" type="Button" parent="."]

rect/scale = Vector2( 1, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1043.0
margin/top = 555.0
margin/right = 1145.0
margin/bottom = 636.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 21 )
flat = true

[node name="Popup_read2" type="WindowDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 104.0
margin/right = 941.0
margin/bottom = 492.0
popup/exclusive = false
window/title = ""

[node name="RichTextLabel" type="RichTextLabel" parent="Popup_read2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 14.0
margin/right = 690.0
margin/bottom = 421.0
custom_fonts/normal_font = SubResource( 2 )
bbcode/enabled = true
bbcode/bbcode = "[center][color=#d9ead3]《遊戲說明》



利用上方的方塊組裝答案，

  組裝完答案即可請按下           

《進階遊戲玩法》



可以利用上方這三個按鈕，減少所使用的方塊數目。

                    EX：                                                                           
改成
[/color][/center]"
visible_characters = -1
percent_visible = 1.0

[node name="Sprite" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 230, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="Sprite 2" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 190, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="Sprite 3" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 270, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )

[node name="Sprite 4" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 310, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="Sprite 5" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 350, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="Sprite 6" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 390, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 13 )

[node name="Sprite 7" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 430, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite 8" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 470, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )

[node name="Sprite 9" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 510, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )

[node name="Sprite 10" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 220, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite 11" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 250, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite 12" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 280, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 11 )

[node name="Sprite 13" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 310, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite 14" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 340, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite 15" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 370, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 11 )

[node name="Sprite 16" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 400, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite 17" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 430, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite 18" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 460, 280 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 11 )

[node name="Sprite 19" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 240, 340 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 14 )

[node name="Sprite 20" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 270, 340 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite 21" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 300, 340 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite 22" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 330, 340 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 11 )

[node name="Sprite 23" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 360, 340 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )

[node name="Sprite 24" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 390, 340 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 16 )

[node name="Sprite 25" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 420, 340 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 16 )

[node name="Sprite 26" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 450, 340 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 16 )

[node name="Sprite 27" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 418.078, 129.842 )
transform/scale = Vector2( 0.6, 0.4 )
texture = ExtResource( 22 )

[node name="Sprite 28" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 294, 200 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite 29" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 344, 200 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )

[node name="Sprite 30" type="Sprite" parent="Popup_read2"]

transform/pos = Vector2( 394, 200 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )

[connection signal="pressed" from="read" to="." method="_on_button_readme_pressed"]

[connection signal="pressed" from="read 2" to="." method="_on_read_2_pressed"]


